--- a/NodeWebServer/simple_server/index.html
+++ b/NodeWebServer/simple_server/index.html
@@ -33,7 +33,7 @@
     outline: none;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    -moz-box-sizing: border-box;ssh local.foo.com matlab -nodisplay -nojvm < hello.m
     width: 100%;
     background: #fff;
     margin-bottom: 4%;
