--- a/ bootstrap_jquery.html
+++ b/ bootstrap_jquery.html
@@ -1,3 +1,11 @@
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+</head>
+<script>
+$(document).ready(function() {
+  $("button").addClass("animated bounce");
+});
+</script>
 <!-- Only change code above this line-->
 <div class="container-fluid">
   <h3 class="text-primary text-center">jQuery Playground</h3>
