--- a/ bootstrap_jquery.html
+++ b/ bootstrap_jquery.html
@@ -4,6 +4,8 @@
 <script>
 $(document).ready(function() {
   $("button").addClass("animated bounce");
+  $(".well").addClass("animated shake");
+  $("#target3").addClass("animated fadeOut");
 });
 </script>
 <!-- Only change code above this line-->
@@ -22,7 +24,7 @@ $(document).ready(function() {
       <h4>#right-well</h4>
       <div class="well" id="right-well">
         <button class="btn btn-default target" id="target4">#target4</button>
-        <button class="btn btn-default target" id="target5">#target5</button>
+        <button  $("#target1").addClass(animated shake btn-primary)class="btn btn-default target" id="target5">#target5</button>
         <button class="btn btn-default target" id="target6">#target6</button>
       </div>
     </div>
