--- a/ bootstrap_jquery.html
+++ b/ bootstrap_jquery.html
@@ -6,6 +6,15 @@ $(document).ready(function() {
   $("button").addClass("animated bounce");
   $(".well").addClass("animated shake");
   $("#target3").addClass("animated fadeOut");
+  $("#target4").html("<em>#target4</em>");
+  $("#target4").remove();
+  $("#target2").appendTo("#right-well");
+  $("#target5").clone().appendTo("#left-well");
+  $("#target1").parent().css("background-color", "red");
+  $("#right-well").children().css("color", "orange");
+  $(".target:nth-child(2)").addClass("animated bounce");
+  $(".target:even").addClass("animated shake");
+  $("body").addClass("animated hinge");
 });
 </script>
 <!-- Only change code above this line-->
